--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -7,39 +7,69 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo_pets" />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/baseline_assignment_ind"
-        android:hint="@string/insira_o_nome_do_usu_rio"
-        android:inputType="textPersonName"
-        android:maxLength="50" />
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/baseline_fingerprint"
-        android:hint="@string/insira_a_senha_do_usu_rio"
-        android:inputType="textPassword"
-        android:maxLength="50" />
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:src="@drawable/logo_pets" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/n_o_tem_cadastro_clique_aqui"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:drawableStart="@drawable/baseline_assignment_ind"
+            android:hint="@string/insira_o_nome_do_usu_rio"
+            android:inputType="textPersonName"
+            android:maxLength="50"
+            android:padding="20dp"
+            android:textSize="20dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/entrar" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:drawableStart="@drawable/baseline_fingerprint"
+            android:hint="@string/insira_a_senha_do_usu_rio"
+            android:inputType="textPassword"
+            android:maxLength="50"
+            android:padding="20dp"
+            android:textSize="20dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sair" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/n_o_tem_cadastro_clique_aqui"
+            android:textSize="15dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/entrar"
+                android:textSize="20dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/sair"
+                android:textSize="20dp" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
